--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.2", features = ["derive"] }
-wasmtime = { version = "15.0.0", features = ["component-model"]}
+wasmtime = "18"
